fix: change branch for workflows location
Signed-off-by: Vladislav Doster <mvdoster@gmail.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,6 @@ on:
 
 jobs:
   commit:
-    uses: zdharma-continuum/.github/.github/workflows/commit-job.yml@master
+    uses: zdharma-continuum/.github/.github/workflows/commit-job.yml@main
   lint:
-    uses: zdharma-continuum/.github/.github/workflows/lint-job.yml@master
+    uses: zdharma-continuum/.github/.github/workflows/lint-job.yml@main
